# face-recognition-

./: .replit  FEATURES.md  QUICK_START_GUIDE.md  README.md  app.py  attendance.db  database.py  face_recognition_model.py  pyproject.toml  replit.md  smoke_test.py
